# htm_flow

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  build_container.sh  dockerfile  setup.sh  simple.json
configs/: full_temporal_pooling.yaml  no_temporal_pooling.yaml  small_test.yaml  temporal_experiment.yaml  top_layer_pooling.yaml
cuda/: CMakeLists.txt  task_gpu_test.cu
cuda/include/: task_gpu_test.hpp
cuda/include/overlap/: gpu_overlap.hpp
cuda/src/: main.cpp  task_gpu_test.cu
cuda/src/overlap/: gpu_overlap.cu
docs/: issues.md
htm_gui/: CMakeLists.txt  Containerfile  build_image.sh  run_debug.sh  run_gui.sh
htm_gui/include/htm_gui/: debugger.hpp  runtime.hpp  snapshot.hpp
htm_gui/src/: debugger.cpp  main_window.cpp  main_window.hpp  views.cpp  views.hpp
include/htm_flow/: config.hpp  config_loader.hpp  gui_runtime.hpp  htm_layer.hpp  htm_region.hpp  inhibition.hpp  inhibition_utils.hpp  overlap.hpp  overlap_utils.hpp  region_runtime.hpp  spatiallearn.hpp
include/htm_flow/sequence_pooler/: active_cells.hpp  predict_cells.hpp  sequence_learning.hpp  sequence_types.hpp
include/htm_flow/temporal/: temporal_memory.hpp
include/htm_flow/temporal_pooler/: temporal_pooler.hpp
include/utilities/: logger.hpp  sdr_inputs.hpp  stopwatch.hpp
src/: config.cpp  config_loader.cpp  debug_region.cpp  gui_runtime.cpp  htm_layer.cpp  htm_region.cpp  main.cpp  region_runtime.cpp  task_flow_test.cpp  task_gpu_test.cpp
src/cuda/: CMakeLists.txt
src/inhibition/: inhibition.cpp
src/overlap/: overlap.cpp  overlap_utils.cpp
src/sequence_pooler/active_cells/: active_cells.cpp
src/sequence_pooler/predict_cells/: predict_cells.cpp
src/sequence_pooler/sequence_learning/: sequence_learning.cpp
src/spatiallearn/: spatiallearn.cpp
src/temporal/: temporal_memory.cpp
src/temporal_pooler/: temporal_pooler.cpp
src/utilities/: stopwatch.cpp
test/: Untitled  overlap_tests.cpp  test1.cpp  test_gpu_overlap.cpp  test_htm_layer_integration.cpp  test_htm_region_integration.cpp  test_inhibition.cpp  test_overlap.cpp  test_sequence_learning_regression.cpp  test_spatial_pooling_integration_suite1.cpp  test_spatial_pooling_integration_suite2.cpp  test_spatial_pooling_integration_suite3.cpp  test_spatiallearn.cpp  test_temporal_pooler.cpp  test_temporal_pooling_integration.cpp  test_temporal_pooling_integration_suite1.cpp  test_temporal_pooling_integration_suite2.cpp  test_temporal_pooling_integration_suite3.cpp  test_temporal_pooling_integration_suite4.cpp
test/integration/: test_htm_layer_integration.cpp  test_htm_region_integration.cpp  test_spatial_pooling_integration_suite1.cpp  test_spatial_pooling_integration_suite2.cpp  test_spatial_pooling_integration_suite3.cpp  test_temporal_pooling_integration.cpp  test_temporal_pooling_integration_suite1.cpp  test_temporal_pooling_integration_suite2.cpp  test_temporal_pooling_integration_suite3.cpp  test_temporal_pooling_integration_suite4.cpp
test/test_utils/: sp_harness.hpp  sp_metrics.hpp  temporal_pooling_test_utils.hpp  tp_harness.hpp  tp_inputs.hpp  tp_metrics.hpp  tp_suite3_patterns.hpp
test/unit/: test_inhibition.cpp  test_overlap.cpp  test_sequence_learning.cpp  test_temporal_pooler.cpp
